--- a/RandomMessages/RandomMessages.csproj
+++ b/RandomMessages/RandomMessages.csproj
@@ -78,7 +78,7 @@
   -->
   <PropertyGroup>
     <PreBuildEvent>
-    </PreBuildEvent>
+      nuget install</PreBuildEvent>
     <PostBuildEvent>
       copy $(TargetPath) $(MISTAKEN_REFERENCES)\$(TargetFileName)
       copy $(TargetDir)\$(TargetName).xml $(MISTAKEN_REFERENCES)\$(TargetName).xml
